syntax = "proto3";

package product;

service ProductService {
  rpc FindAll (Empty) returns (ProductList) {}
  rpc FindOne (ProductById) returns (Product) {}
}

message Empty {}

message ProductList {
  repeated Product products = 1;
}

message ProductById {
  int32 id = 1;
}

message Product {
  int32 id = 1;
  string name = 2;
}