syntax = "proto3";

package user;

service UserService {
  rpc FindAll (Empty) returns (UserList) {}
  rpc FindOne (UserById) returns (User) {}
}

message Empty {}

message UserList {
  repeated User data = 1;
}

message UserById {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
}